# DynoBox

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/dyno-app/: Cargo.toml  build.rs
crates/dyno-app/src/: avb_descriptor.rs  boot_spl.rs  clean_launcher.rs  dbp.rs  debloat.rs  dex_patch.rs  events.rs  ext4_helpers.rs  ext4_reader.rs  fix_locale.rs  fuck_as.rs  fuck_lgsi.rs  integrity.rs  integrity_signature.rs  lib.rs  pipeline.rs  report.rs  spl.rs  spl_patch.rs  system_spl.rs  time_format.rs  vendor_spl.rs  verify.rs
crates/dyno-avb/: Cargo.toml
crates/dyno-avb/src/: crypto.rs  info.rs  lib.rs  parser.rs  resign.rs
crates/dyno-cli/: Cargo.toml
crates/dyno-cli/src/: lib.rs  main.rs
crates/dyno-core/: Cargo.toml
crates/dyno-core/src/: ab_slot.rs  error.rs  lib.rs  workspace.rs
crates/dyno-gui/: Cargo.toml
crates/dyno-gui/src/: main.rs
crates/dyno-payload/: Cargo.toml  build.rs
crates/dyno-payload/proto/: puffin.proto
crates/dyno-payload/src/: lib.rs  patcher.rs  payload.rs  puffin.rs
crates/dyno-super/: Cargo.toml
crates/dyno-super/src/: builder.rs  extractor.rs  lib.rs  metadata.rs  parser.rs  parser_tests.rs  repack.rs
crates/dyno-xml/: Cargo.toml
crates/dyno-xml/src/: catalog.rs  catalog_tests.rs  crypto.rs  lib.rs
docs/superpowers/plans/: 2026-07-09-power-menu-dbp.md
misc/macos/: DynoBox.entitlements  Info.plist  make-app.sh
patches/: README.md  circle-to-search.dbp  clean-launcher.dbp  debloat-launcher.dbp  debloat-security.dbp  debloat-settings.dbp  debloat-setupwizard.dbp  debloat-theme.dbp  disable-quick-kill.dbp  enable-circle-to-search.dbp  enable-google-services.dbp  google-lens-button.dbp  google-services.dbp  power-gesture-settings.dbp  power-menu.dbp  show-google-lens.dbp  show-google-services.dbp  show-power-gesture.dbp  unlock-locale.dbp  unlock-wifi.dbp  wifi-unlock.dbp  zuisettings-locale.dbp
