[workspace]
members = [
  "crates/dyno-app",
  "crates/dyno-cli",
  "crates/dyno-core",
  "crates/dyno-super",
  "crates/dyno-payload",
  "crates/dyno-xml",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.94.1"
license = "Apache-2.0"
authors = ["miner7222"]

[workspace.dependencies]
dynobox-app = { path = "crates/dyno-app" }
dynobox-core = { path = "crates/dyno-core" }
dynobox-super = { path = "crates/dyno-super" }
dynobox-payload = { path = "crates/dyno-payload" }
dynobox-xml = { path = "crates/dyno-xml" }
avbtool-rs = { git = "https://github.com/miner7222/avbtool-rs", tag = "0.1.0" }
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tempfile = "3.16.0"

[workspace.lints.rust]
unsafe_code = "forbid"
