[workspace]
members = [
  "crates/dyno-app",
  "crates/dyno-cli",
  "crates/dyno-core",
  "crates/dyno-super",
  "crates/dyno-payload",
  "crates/dyno-xml",
]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2024"
rust-version = "1.94.1"
license = "Apache-2.0"
authors = ["miner7222"]

[workspace.dependencies]
dynobox-app = { path = "crates/dyno-app" }
dynobox-core = { path = "crates/dyno-core" }
dynobox-super = { path = "crates/dyno-super" }
dynobox-payload = { path = "crates/dyno-payload" }
dynobox-xml = { path = "crates/dyno-xml" }
avbtool-rs = { git = "https://github.com/miner7222/avbtool-rs" }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18"
memchr = "2.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
sha2 = "0.11.0"
aes = "0.9"
cbc = { version = "0.2", features = ["alloc"] }

[workspace.lints.rust]
unsafe_code = "forbid"
