[workspace]
members = [
  "crates/dyno-app",
  "crates/dyno-cli",
  "crates/dyno-core",
  "crates/dyno-super",
  "crates/dyno-payload",
  "crates/dyno-xml",
]
resolver = "2"

[workspace.package]
version = "0.1.7"
edition = "2024"
rust-version = "1.94.1"
license = "Apache-2.0"
authors = ["miner7222"]

[workspace.dependencies]
dynobox-app = { path = "crates/dyno-app" }
dynobox-core = { path = "crates/dyno-core" }
dynobox-super = { path = "crates/dyno-super" }
dynobox-payload = { path = "crates/dyno-payload" }
dynobox-xml = { path = "crates/dyno-xml" }
avbtool-rs = { git = "https://github.com/miner7222/avbtool-rs" }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18"
memchr = "2.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
sha2 = "0.11.0"
aes = "0.9"
cbc = { version = "0.2", features = ["alloc"] }

[workspace.lints.rust]
# `deny` rather than `forbid` so the single legitimate `unsafe` block in
# `crates/dyno-payload/build.rs` (`std::env::set_var`, made unsafe in
# Rust 1.95 but always sound during a build script's single-threaded
# `main`) can opt out via `#[allow(unsafe_code)]`. Runtime code stays
# fully banned from `unsafe`.
unsafe_code = "deny"

# `RUSTFLAGS=-D warnings` in CI promotes every warning to a hard error; this
# block carves out narrow stylistic clippy lints that conflict with the
# AOSP-mirrored OTA / payload code in `dyno-payload` (puffin.rs walks
# fixed-size lookup tables by index in ways `needless_range_loop` cannot
# rewrite without changing semantics) and a couple of pedantic Rust 1.94
# additions that are not worth blanket-fixing across the tree:
#
#   * `needless_range_loop`         — AOSP puffin parser intentionally
#                                     indexes lookup tables (PERMUTATIONS,
#                                     `len_count`, `rcodes`) inside numeric
#                                     loops to mirror the upstream C
#                                     implementation.
#   * `collapsible_if`              — nested `if` blocks in catalog / puffin
#                                     stay easier to read with the original
#                                     branch structure.
#   * `manual_is_multiple_of`       — added in clippy 1.94; the codebase
#                                     uses `% N == 0` consistently.
#   * `manual_div_ceil`             — same vintage; existing
#                                     `(a + b - 1) / b` patterns in
#                                     payload patching are clear in context.
#   * `doc_overindented_list_items` — pedantic rustdoc whitespace nit.
#   * `needless_borrows_for_generic_args` — `&[expr]` in test setup makes
#                                     the array literal explicit.
[workspace.lints.clippy]
needless_range_loop = "allow"
collapsible_if = "allow"
manual_is_multiple_of = "allow"
manual_div_ceil = "allow"
doc_overindented_list_items = "allow"
needless_borrows_for_generic_args = "allow"
type_complexity = "allow"
unnecessary_cast = "allow"
absurd_extreme_comparisons = "allow"
regex_creation_in_loops = "allow"
