[package]
name = "dynobox-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Application-layer command API and progress events for DynoBox"

[dependencies]
anyhow.workspace = true
avbtool-rs.workspace = true
dynobox-core.workspace = true
dynobox-payload.workspace = true
dynobox-super.workspace = true
dynobox-xml.workspace = true
tempfile.workspace = true
serde.workspace = true
