[package]
name = "dynobox-avb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "AVB and vbmeta support crate for DynoBox"

[dependencies]
byteorder = "1.5.0"
dynobox-core.workspace = true
lazy_static = "1.5.0"
num-bigint-dig = "0.8.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
pkcs8 = { version = "0.10.2", features = ["pem"] }
rsa = "0.9.10"
serde.workspace = true
sha1 = "0.10.6"
sha2 = "0.11.0"
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
